src/validation/tests/snapshots/rusty__validation__tests__array_validation_test__type_level_too_many_elements.snap
---
source: src/validation/tests/array_validation_test.rs
expression: diagnostics
---
error[E043]: Too many initial values for array `arraytype`. Expected 5, found 10.
  ┌─ <internal>:2:49
  │
2 │         TYPE arraytype : ARRAY [1..5] OF INT := [1,2,3,4,5,6,7,8,9,10];
  │                                                 ^^^^^^^^^^^^^^^^^^^^^^ Too many initial values for array `arraytype`. Expected 5, found 10.
